
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.10.0"
solana-program = "~1.18.11"

[dev-dependencies]
solana-program-test = "~1.18.11"
solana-sdk = "~1.18.11"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
