cargo-features = ["edition2024"]

[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
license = "MIT LICENCE"
edition = "2024"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.10.0"
solana-program = "~1.18.11"

[dev-dependencies]
solana-client = "1.18.26"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = "1.44.2"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]

[[example]]
name = "client"
path = "example/client.rs"
